# WhimprFlow

./: .gitignore  Cargo.toml  README.md  SECURITY.md  perfect-todo.md
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
crates/whimpr-asr/: Cargo.toml
crates/whimpr-asr/examples/: transcribe.rs
crates/whimpr-asr/src/: lib.rs
crates/whimpr-audio/src/: lib.rs
crates/whimpr-cleanup/src/: lib.rs
crates/whimpr-core/: Cargo.toml
crates/whimpr-core/src/: backup.rs  lib.rs  safety.rs  settings.rs  stats.rs
crates/whimpr-core/src/asr/: mod.rs
crates/whimpr-core/src/cleanup/: command_prompts.rs  gates.rs  levels.rs  mod.rs  prompts.rs
crates/whimpr-core/src/dictionary/: mod.rs
crates/whimpr-core/src/snippets/: mod.rs
crates/whimpr-core/src/state/: actions.rs  events.rs  machine.rs
crates/whimpr-core/src/voice_memory/: mod.rs
crates/whimpr-core/src/workflows/: mod.rs
crates/whimpr-core/tests/: pipeline.rs
crates/whimpr-ipc/src/: codec.rs  lib.rs
crates/whimpr-llm-worker/: Cargo.toml
crates/whimpr-llm-worker/src/: main.rs
crates/whimpr-sidecar/: Cargo.toml
crates/whimpr-sidecar/src/: main.rs
docs/: ARCHITECTURE-DUAL-PLATFORM.md  BUILD-STATUS.md  SPEC.md
docs/research/: app-teardown.md  benchmark-resource-usage.md  cleanup-llm-and-api.md  cleanup-prompting.md  edit-behavior.md  feature-inventory.md  gap-asr-engine-mac-latency.md  gap-auto-learned-dictionary.md  gap-model-verification.md  gap-sidecar-vs-inprocess.md  gap-tauri-vs-electron-overlay.md  gap-temporal-behavior.md  hotkeys-interaction.md  local-asr.md  macos-architecture.md  oss-clones.md  stack-decision.md  ui-flow-bar.md  win-hotkeys.md  win-insertion.md  win-llm.md  win-shell.md  win-teardown.md  xplat-asr.md
docs/superpowers/specs/: 2026-07-19-roadmap-15-design.md
public/: README.md
src-tauri/: Cargo.toml  setup-signing.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: appctx.rs  autolearn.rs  hotkey.rs  lib.rs  linux.rs  local_llm.rs  notes.rs  paste.rs  win.rs
ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/hub/: App.tsx  DictionaryPane.tsx  Help.tsx  Home.tsx  Insights.tsx  MemoryPane.tsx  Onboarding.tsx  PrivacyPane.tsx  ScratchpadPane.tsx  SettingsPane.tsx  ShortcutsPane.tsx  Sidebar.tsx  SnippetsPane.tsx  StylePane.tsx  TransformsPane.tsx  Walkthrough.tsx  WorkflowsPane.tsx  anim.ts  api.ts  icons.tsx  main.tsx  theme.ts  ui.tsx
ui/src/overlay/: FlowBar.tsx  main.tsx
ui/src/tokens/: values.ts
