[package]
name = "whimpr-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "whimpr_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
whimpr-core = { path = "../crates/whimpr-core" }
whimpr-ipc = { path = "../crates/whimpr-ipc" }
whimpr-audio = { path = "../crates/whimpr-audio" }
whimpr-asr = { path = "../crates/whimpr-asr" }
whimpr-cleanup = { path = "../crates/whimpr-cleanup" }
strsim = "0.11"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
arboard = "3"
# OS randomness for the voice-memory encryption key (generated once, kept in the
# keychain). Same crate/version whimpr-core uses for AES-GCM nonces.
getrandom = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# keyring 3 ships with NO platform keystore compiled in by default - without the
# per-OS feature every Entry op is a silent no-op, so API keys and the voice-memory
# encryption key would never persist. Declared per-target so each OS only pulls
# its own keystore backend.
keyring = { version = "3", features = ["windows-native"] }
# Windows platform layer (low-level keyboard hook, SendInput paste, foreground-app
# detection). UNVERIFIED: written on macOS, never compiled or run on Windows.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# Secret Service keystore (GNOME Keyring / KWallet). `sync-secret-service` links
# against libdbus-1 (build hosts need the libdbus headers, e.g. libdbus-1-dev);
# `crypto-rust` keeps the session crypto pure-Rust instead of pulling OpenSSL.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
# X11 hotkey grab + display-server plumbing for the Linux platform layer
# (linux.rs `use x11rb::...`). UNVERIFIED: written on macOS, never compiled on
# Linux. Was previously only present transitively via arboard, which does not
# satisfy a direct `use`.
x11rb = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Keychain keystore (see the Windows table's note on keyring 3 defaults).
keyring = { version = "3", features = ["apple-native"] }
macos-accessibility-client = "0.0.1"
# Frontmost-app detection (paste-target → per-app cleanup formatting). Already in
# the tree via Tauri; declared here so we can call NSWorkspace directly.
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
